--- a/styles/main.css
+++ b/styles/main.css
@@ -19,7 +19,7 @@
   }
 
   #map {
-    height: 300px;
+    height: 800px;
     width: 100%;
   }
 
@@ -42,4 +42,8 @@
 .break-word{
   word-wrap: break-word;
 
+}
+
+.com-margin-btm{
+  margin-bottom: 10px;;
 }
